# powerlab

./: .boring  .gitignore  Powerlab.cabal  README.md  cmds.go  crc.go  crc_test.go  logger.go  logger_test.go  stack.yaml  status.go  status_test.go
app/: Main.hs
fetchlog/: fetchlog.go
log2csv/: log2csv.go
logconvert/: logconvert.go
powerlablog/: powerlablog.go  process.r
powerserver/: README.md  httputil.go  logweb.go  powerserver.go  powerserver_test.go  syslog_unix.go  syslog_windows.go  web.go
powerserver/static/: index.html  nv.d3.css  powerserver.js
reports/: fatshark-battery-test.R  process.r
src/: MiniJSON.hs  Powerlab.hs
src/Powerlab/: Logger.hs  Serial.hs  Status.hs
static/: index.html  powerserver.js
status/: statuscmd.go
test/: Bench.hs  CRCTest.hs  Main.hs  MiniJSONTest.hs  PowerlabTest.hs  Spec.hs  StatusTest.hs
