name:                Powerlab
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/Powerlab#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Powerlab, MiniJSON, Powerlab.Status
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , time
                     , binary
                     , text
  default-language:    Haskell2010

executable powerserver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Powerlab, wai, warp, http-types, bytestring
                     , time, stm
  default-language:    Haskell2010

test-suite Powerlab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       CRCTest, StatusTest
  build-depends:       base
                     , Powerlab
                     , time
                     , bytestring
                     , HUnit, HUnit-approx
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit, test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark Powerlab-bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Bench.hs
  build-depends:      base
                    , Powerlab
                    , bytestring
                    , HUnit
                    , QuickCheck
                    , test-framework
                    , test-framework-hunit, test-framework-quickcheck2
                    , criterion
  ghc-options:        -O2

source-repository head
  type:     git
  location: https://github.com/dustin/Powerlab
