name:                Powerlab
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/Powerlab#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Powerlab, Powerlab.Status, Powerlab.Serial, Powerlab.Logger
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , time
                     , binary
                     , text
                     , serialport
  default-language:    Haskell2010
  ghc-options:        -O2 -Wall

executable powerserver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Powerlab, wai, wai-app-static, warp, http-types, bytestring
                     , aeson, time, stm, async, optparse-applicative
  default-language:    Haskell2010
  ghc-options:        -O2 -Wall

test-suite Powerlab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       CRCTest, StatusTest, PowerlabTest
  build-depends:       base
                     , Powerlab
                     , time
                     , bytestring, text, ieee754, binary, aeson
                     , HUnit, HUnit-approx
                     , QuickCheck
                     , tasty, tasty-hunit, tasty-quickcheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark Powerlab-bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Bench.hs
  build-depends:      base
                    , Powerlab
                    , bytestring
                    , criterion
  ghc-options:        -Wall -O2

source-repository head
  type:     git
  location: https://github.com/dustin/Powerlab
